--- a/new update/src/app/app.json
+++ b/new update/src/app/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Force_Appointment_Completion",
+  "name": "Get started App",
   "description": "This is an example private app that shows a custom card on the Contact record tab built with React-based frontend. This card demonstrates a simple handshake with HubSpot's serverless backend.",
-  "uid": "Force_Appointment_Completion",
-  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write","crm.objects.custom.read", "crm.objects.custom.write","collector.graphql_schema.read","collector.graphql_query.execute","crm.objects.users.read","crm.objects.owners.read","scheduler.meetings.meeting-link.read","hubdb"],
+  "uid": "get_started_app",
+  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write"],
   "public": false,
   "extensions": {
     "crm": {
