--- a/Force Appointment completion/src/app/app.json
+++ b/Force Appointment completion/src/app/app.json
@@ -2,7 +2,7 @@
   "name": "Force_Appointment_Completion",
   "description": "This is an example private app that shows a custom card on the Contact record tab built with React-based frontend. This card demonstrates a simple handshake with HubSpot's serverless backend.",
   "uid": "Force_Appointment_Completion",
-  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write","crm.objects.custom.read", "crm.objects.custom.write","collector.graphql_schema.read","collector.graphql_query.execute","crm.objects.users.read","crm.objects.owners.read","scheduler.meetings.meeting-link.read","hubdb"],
+  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write","crm.objects.custom.read", "crm.objects.custom.write","collector.graphql_schema.read","collector.graphql_query.execute","crm.objects.users.read","crm.objects.owners.read","scheduler.meetings.meeting-link.read","hubdb","crm.objects.deals.read","crm.objects.deals.write","crm.schemas.deals.read","crm.schemas.deals.write"],
   "public": false,
   "extensions": {
     "crm": {
